--- a/ros_ws/src/racing/pure_pursuit/package.xml
+++ b/ros_ws/src/racing/pure_pursuit/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>wall_following</name>
+  <name>pure_pursuit</name>
   <version>0.0.0</version>
-  <description>The wall_following package</description>
+  <description>The pure_pursuit package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/wall_following</url> -->
+  <!-- <url type="website">http://wiki.ros.org/controller</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
